project/stage/parse_tests/tests/reject/bad_statements/bad_if_else/scalar_assignment_in_condition.ul
int F() {
    if(  temp=0 ) { } else {}
}
